<resources>
    <string name="app_name">2024.12.11</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="email">email</string>
    <string name="send">send</string>
    <string name="names">name:</string>
    <string name="surnames">surname:</string>
    <string name="emails">email:</string>
</resources>